@@ -61,7 +61,10 @@ async def test_rls_isolation() -> None:  # noqa: D401
         # create a non-superuser role for RLS verification
         async with async_session() as session:
             await session.execute(text("CREATE ROLE appuser LOGIN PASSWORD 'app'"))
+            # Grant permissions to all tables that might be needed
             await session.execute(text("GRANT SELECT ON TABLE \"user\" TO appuser"))
+            await session.execute(text("GRANT SELECT ON TABLE organization TO appuser"))
+            await session.execute(text("GRANT authenticated TO appuser"))
             await session.commit()
 
         # fetch org ids
@@ -79,14 +82,30 @@ async def test_rls_isolation() -> None:  # noqa: D401
         async with verify_session() as session_org1:
             # Use global (non-local) to survive across implicit transactions in CI
             await session_org1.execute(text("SELECT set_config('app.current_org', :org, false)"), {"org": str(org1)})
+            
+            # Debug: Check what the current_org setting is
+            current_org_result = await session_org1.execute(text("SELECT current_setting('app.current_org', true)"))
+            current_org_value = current_org_result.scalar()
+            print(f"DEBUG: current_org setting = {current_org_value}")
+            
+            # Debug: Check if any users exist at all (ignoring RLS)
+            try:
+                all_users_result = await session_org1.execute(text("SELECT COUNT(*) FROM \"user\""))
+                all_users_count = all_users_result.scalar()
+                print(f"DEBUG: Total users in table = {all_users_count}")
+            except Exception as e:
+                print(f"DEBUG: Error counting users = {e}")
+            
             users_org1 = (await session_org1.execute(select(models.User))).scalars().all()
-            assert len(users_org1) == 1
+            print(f"DEBUG: RLS filtered users = {len(users_org1)}")
+            assert len(users_org1) == 1, f"Expected 1 user for org {org1}, got {len(users_org1)}"
             assert users_org1[0].email == "a@example.com"
 
         async with verify_session() as session_org2:
             await session_org2.execute(text("SELECT set_config('app.current_org', :org, false)"), {"org": str(org2)})
             users_org2 = (await session_org2.execute(select(models.User))).scalars().all()
-            assert len(users_org2) == 1
+            print(f"DEBUG: RLS filtered users for org2 = {len(users_org2)}")
+            assert len(users_org2) == 1, f"Expected 1 user for org {org2}, got {len(users_org2)}"
             assert users_org2[0].email == "b@example.com"
     finally:
         pg.stop() 
